added some new links

--- a/notes.org
+++ b/notes.org
@@ -8,5 +8,9 @@
 - https://www.orga-architect.nl
 ** Bouwmaterialen
 - https://www.groenebouwmaterialen.nl
+*** Stro
+- https://jmuskenshooi-stro.nl/
+** Verwarming
+- https://vuurenleem.nl/
 
 
